# Image-Agent

./: .gitignore  CLAUDE.md  Dockerfile  FRONTEND_PLAN.txt  README.md  TODOS.md  api.py  app.py  docker-compose.yml  general.txt  image_agent_development_plan.txt  pyproject.toml  requirements.txt
data/: cache.db
frontend/: index.html  script.js  style.css
landing/: index.html
src/: __init__.py  agent.py  analyzer.py  config.py  main.py  result.py  test.py
src/cache/: disk_cache.py  sqlite_cache.py
src/tools/: confidence_calibrator.py  exif_reader.py  forensic_analyzer.py  image_hasher.py  llm_vision.py  llm_with_search.py  multi_pass_analyzer.py  watermark_detector.py
tests/: conftest.py  test_api.py  test_cache.py
