[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "image-agent"
version = "0.1.0"
description = "AI-powered image authenticity detection pipeline using Google Gemini"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "image", "detection", "gemini", "forensics"]
dependencies = [
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "imagehash>=4.3.1",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scipy>=1.11.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
image-agent = "image_agent.main:main"

[tool.setuptools]
package-dir = {"image_agent" = "src"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
